@@ -1,3 +1,8 @@
+2006-02-11 12:37 Mike Park  <mike.park@nasa.gov>
+
+	* src/intersect.c (intersectTriangleSegment) exposed the ratio of
+	intersection.
+
 2006-02-10 13:21 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridcad.c (gridUntangleAreaUV,gridUntangleVolume) exclude
